src/test/ui/feature-gates/feature-gate-generators.stderr
error[E0658]: yield syntax is experimental (see issue #43122)
  --> $DIR/feature-gate-generators.rs:2:5
   |
LL |     yield true;
   |     ^^^^^^^^^^
   |
   = help: add #![feature(generators)] to the crate attributes to enable

error[E0627]: yield statement outside of generator literal
  --> $DIR/feature-gate-generators.rs:2:5
   |
LL |     yield true;
   |     ^^^^^^^^^^

error: aborting due to 2 previous errors

Some errors occurred: E0627, E0658.
For more information about an error, try `rustc --explain E0627`.
