src/test/ui/feature-gates/feature-gate-generators.rs
fn main() {
    yield true; //~ ERROR yield syntax is experimental
}
